After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 702732 - v4l2: Does not link statically on linux
v4l2: Does not link statically on linux
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.x
Other Linux
: Normal normal
: 1.0.8
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-06-20 11:22 UTC by Morgan Lindqvist
Modified: 2013-06-20 13:36 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Morgan Lindqvist 2013-06-20 11:22:05 UTC
When linking statically on linux I get the following error message:

multiple definition of `GST_CAT_PERFORMANCE'

Looking at the file gstv4l2.c on line 42 it looks like _STATIC is missing. Other elements are using GST_DEBUG_CATEGORY_STATIC(GST_CAT_PERFORMANCE), and not GST_DEBUG_CATEGORY(GST_CAT_PERFORMANCE), and they work.
Comment 1 Wim Taymans 2013-06-20 13:36:17 UTC
commit 821d99a50354650fa8d6254b69ad40e3518f285c
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Thu Jun 20 15:35:11 2013 +0200

    v4l2: don't redefine the PERFORMANCE debug variable
    
    It is already defined in core.
    
    fixes https://bugzilla.gnome.org/show_bug.cgi?id=702732