v4l2: don't redefine the PERFORMANCE debug variable

It is already defined in core.

fixes https://bugzilla.gnome.org/show_bug.cgi?id=702732